src/index.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
  list-style: none;
}

html {
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
}

@layer components {
  .btn-primary {
    @apply px-8 py-3;
    @apply inline-flex items-center justify-center;
    @apply rounded-sm bg-black  text-white;
    @apply hover:bg-[#FF5D56];
    @apply transition-all duration-500;
  }

  .btn-outline {
    @apply px-8 py-3;
    @apply inline-flex items-center justify-center;
    @apply rounded-sm border  border-white text-white;
    @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
    @apply transition-all duration-500;
  }
  .btn-sm {
    @apply px-3 py-1;
    @apply inline-flex items-center justify-center;
    @apply border border-[#333] rounded-md text-white;
    @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
    @apply transition-all duration-500;
  }
}

